--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
             <strong>Email:</strong> 
             <a href="#">mhouser33@yahoo.com</a>
         </li>
-      </ul>
 
-      <ul>
         <li>
             <strong>Github:</strong> 
             <a href="#">mhouser33</a>
@@ -67,7 +65,7 @@
 
 
             <br>
-            <a href="resume.html">Resume</a>   
+            <a href="Resume.docx">Resume</a>   
         </body>
         </html>
 
