--- a/index.html
+++ b/index.html
@@ -4,21 +4,38 @@
 <head>
   <meta charset="UTF-8">
   <title>Matt's Bio</title>
+
+
+  <style>
+    h1 {
+      font-size: 50px;
+    }
+
+    p {
+      text-align: justify;
+    }
+
+    img {
+      width: 40%;
+    }
+
+  </style>
+
 </head>
 
 <body>
    
-    <h1>Matt Houser</h1>
+    <h1 style="color: coral;">Matt Houser</h1>
 
       <img src="Head Shot.jpeg" alt="Head Shot">
       
-      <p>
+      <p style="color: cornflowerblue;">
         I am originally from Zionsville, IN. Went to Western Kentucky University in Bowling Green, KY
         and graduated with a degree in Sport Management and minor in Marketing. 
       </p>
 
       <p>
-      I became a golf professional in 2011, moved back to Indiana in 2014 and reside in Broad Ripple.
+      I became a <span style="font-style: oblique;">golf professional</span> in 2011, moved back to Indiana in 2014 and reside in Broad Ripple.
       Currently work in client success for a golf tournament software company and is taking this class to 
       work with the development team for Golf Genius in the future. 
       </p>
@@ -26,15 +43,15 @@
       <ul>
         <li>
             <strong>Email:</strong> 
-            <a href="#">mhouser33@yahoo.com</a>
+            <a style="color: crimson; font-style: italic;"href="#">mhouser33@yahoo.com</a>
         </li>
         <li>
             <strong>Github:</strong> 
-            <a href="#">mhouser33</a>
+            <a style="color: purple; font-style: italic;"href="#">mhouser33</a>
         </li>
         <li>
             <strong>Facebook:</strong> 
-            <a href="#">https://www.facebook.com/matt.houser.12</a>
+            <a style="color: greenyellow; font-style: italic;"href="#">https://www.facebook.com/matt.houser.12</a>
         </li> 
       </ul>
         
