--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
    
-    <h1 style="color: coral;">Matt Houser</h1>
+    <h1 style="color: rgb(80, 255, 203);">Matt Houser</h1>
 
       <img src="Head Shot.jpeg" alt="Head Shot">
       
