--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
   <style>
     h1 {
+  text-shadow: 2px 2px #ff0000;
+}
+    
+    {
       font-size: 50px;
     }
 
@@ -23,8 +27,9 @@
 
 </head>
 
-<body>
-   
+<body> 
+  {background-color: coral;} 
+
     <h1 style="color: rgb(80, 255, 203);">Matt Houser</h1>
 
       <img src="Head Shot.jpeg" alt="Head Shot">
