--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
 </head>
 
-<body> 
-  {background-color: coral;} 
+<body {background-color: coral;} >
 
     <h1 style="color: rgb(80, 255, 203);">Matt Houser</h1>
 
