--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <title>Matt's Bio</title>
 
-
   <style>
     h1 {
   text-shadow: 2px 2px #ff0000;
@@ -18,7 +17,9 @@
     p {
       text-align: justify;
     }
-
+    body {
+    background-color: coral;
+  }
     img {
       width: 10%;
     }
@@ -27,7 +28,7 @@
 
 </head>
 
-<body {background-color: coral;} >
+<body>
 
     <h1 style="color: rgb(80, 255, 203);">Matt Houser</h1>
 
