--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <img src="Head Shot.jpeg" alt="Head Shot">
       
-      <p style="color: cornflowerblue;">
+      <p style="color: darkblue;">
         I am originally from Zionsville, IN. Went to Western Kentucky University in Bowling Green, KY
         and graduated with a degree in Sport Management and minor in Marketing. 
       </p>
