--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
       width: 10%;
     }
 
+    .gumdrop {
+      color: green;
+    }
+
+    #brownbear {
+      color: hotpink
+      font-size: 10pt;
+    }
+
   </style>
 
 </head>
@@ -39,7 +48,7 @@
         and graduated with a degree in Sport Management and minor in Marketing. 
       </p>
 
-      <p>
+      <p class="gumdrop">
       I became a <span style="font-style: oblique;">golf professional</span> in 2011, moved back to Indiana in 2014 and reside in Broad Ripple.
       Currently work in client success for a golf tournament software company and is taking this class to 
       work with the development team for Golf Genius in the future. 
@@ -62,12 +71,12 @@
         
       <table border="1">
           <tr>
-              <th>Movies</th>
+              <th id="brownbear">Movies</th>
               <th>Songs</th>
               <th>Activities</th>
           </tr>
           <tr>
-              <td>Inception</td>
+              <td class="gumdrop">Inception</td>
               <td>Juicy</td>
               <td>Golf</td>
           </tr>
