--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
     #brownbear {
       color: hotpink
-      font-size: 10pt;
     }
 
   </style>
@@ -41,7 +40,10 @@
 
     <h1 style="color: rgb(80, 255, 203);">Matt Houser</h1>
 
-      <img src="Head Shot.jpeg" alt="Head Shot">
+      <img src="Head Shot.jpeg" alt="Head Shot"
+      display: block;
+      margin-left: auto;
+      margin-right: auto;>
       
       <p style="color: darkblue;">
         I am originally from Zionsville, IN. Went to Western Kentucky University in Bowling Green, KY
