--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   }
     img {
       width: 10%;
+      border-radius: 50%;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .gumdrop {
@@ -40,10 +44,7 @@
 
     <h1 style="color: rgb(80, 255, 203);">Matt Houser</h1>
 
-      <img src="Head Shot.jpeg" alt="Head Shot"
-      display: block;
-      margin-left: auto;
-      margin-right: auto;>
+      <img src="Head Shot.jpeg" alt="Head Shot">
       
       <p style="color: darkblue;">
         I am originally from Zionsville, IN. Went to Western Kentucky University in Bowling Green, KY
