--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
   <style>
     h1 {
-  text-shadow: 2px 2px #ff0000;
+      text-shadow: 2px 2px #ff0000;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
 }
     
     {
