--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <style>
     h1 {
       text-shadow: 2px 2px #ff0000;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
+      text-align: center;
 }
     
     {
