--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     
     {
       font-size: 50px;
+      text-align: center;
     }
 
     p {
-      text-align: justify;
+      text-align: center;
     }
     body {
     background-color: coral;
+    text-align: center;
   }
     img {
       width: 10%;
