--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       text-align: center;
 }
     
-    {
+    table {
       font-size: 50px;
       text-align: center;
     }
@@ -63,20 +63,20 @@
       <ul>
         <li>
             <strong>Email:</strong> 
-            <a text-align: center; style="color: crimson; font-style: italic;"href="#">mhouser33@yahoo.com</a>
+            <a style="color: crimson; font-style: italic;"href="#">mhouser33@yahoo.com</a>
         </li>
         <li>
             <strong>Github:</strong> 
-            <a text-align: center; style="color: purple; font-style: italic;"href="#">mhouser33</a>
+            <a style="color: purple; font-style: italic;"href="#">mhouser33</a>
         </li>
         <li>
             <strong>Facebook:</strong> 
-            <a text-align: center;  style="color: greenyellow; font-style: italic;"href="#">https://www.facebook.com/matt.houser.12</a>
+            <a style="color: greenyellow; font-style: italic;"href="#">https://www.facebook.com/matt.houser.12</a>
         </li> 
       </ul>
         
       <table text-align: center; border="1"> 
-          <tr>
+          <tr> 
               <th id="brownbear">Movies</th>
               <th>Songs</th>
               <th>Activities</th>
