--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </li> 
       </ul>
         
-      <table text-align: center; border="1"> 
+      <table align="center"; border="1"> 
           <tr> 
               <th id="brownbear">Movies</th>
               <th>Songs</th>
