--- a/index.html
+++ b/index.html
@@ -9,21 +9,15 @@
     h1 {
       text-shadow: 2px 2px #ff0000;
       text-align: center;
-}
-    ul {
-      text-align:center;
     }
-
-
     table {
       font-size: 15px;
     }
-
     p {
       text-align: center;
     }
     body {
-    background-color: coral;
+    background-color: rgb(247, 229, 131);
     text-align: center;
   }
     img {
@@ -35,11 +29,11 @@
     }
 
     .gumdrop {
-      color: green;
+      color:  rgb(58, 32, 207);
     }
 
     #brownbear {
-      color: hotpink
+      color: rgb(58, 32, 207);
     }
 
   </style>
@@ -48,7 +42,7 @@
 
 <body>
 
-    <h1 style="color: rgb(80, 255, 203);">Matt Houser</h1>
+    <h1 style="color:  rgb(58, 32, 207);">Matt Houser</h1>
 
       <img src="Head Shot.jpeg" alt="Head Shot">
       
@@ -66,15 +60,15 @@
       <ul>
         <li>
             <strong>Email:</strong> 
-            <a style="color: crimson; font-style: italic;"href="#">mhouser33@yahoo.com</a>
+            <a style="color:  rgb(58, 32, 207); font-style: italic;"href="#">mhouser33@yahoo.com</a>
         </li>
         <li>
             <strong>Github:</strong> 
-            <a style="color: purple; font-style: italic;"href="#">mhouser33</a>
+            <a style="color:  rgb(58, 32, 207); font-style: italic;"href="#">mhouser33</a>
         </li>
         <li>
             <strong>Facebook:</strong> 
-            <a style="color: greenyellow; font-style: italic;"href="#">https://www.facebook.com/matt.houser.12</a>
+            <a style="color:  rgb(58, 32, 207); font-style: italic;"href="#">https://www.facebook.com/matt.houser.12</a>
         </li> 
       </ul>
         
