--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         and graduated with a degree in Sport Management and minor in Marketing. 
       </p>
 
-      <p class="gumdrop">
+      <p style="color: darkblue;">
       I became a <span style="font-style: oblique;">golf professional</span> in 2011, moved back to Indiana in 2014 and reside in Broad Ripple.
       Currently work in client success for a golf tournament software company and is taking this class to 
       work with the development team for Golf Genius in the future. 
@@ -74,22 +74,22 @@
         
       <table align="center"; border="1"> 
           <tr> 
-              <th id="brownbear">Movies</th>
+              <th style="color: darkblue;">>Movies</th>
               <th>Songs</th>
               <th>Activities</th>
           </tr>
           <tr>
-              <td class="gumdrop">Inception</td>
+              <td style="color: darkblue;">>Inception</td>
               <td>Juicy</td>
               <td>Golf</td>
           </tr>
               <tr>
-              <td>Step Brothers</td>
+              <td style="color: darkblue;">>Step Brothers</td>
               <td>All Along the Watchtower</td>
               <td>Workout</td>
           </tr>
           <tr>
-              <td>The Big Lebowski</td>
+              <td style="color: darkblue;">>The Big Lebowski</td>
               <td>Blowin In the Wind</td>
               <td>Cooking</td>
           </tr>
