--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
         
       <table align="center"; border="1"> 
           <tr> 
-              <th style="color: darkblue;">>Movies</th>
+              <th style="color: darkblue;">Movies</th>
               <th>Songs</th>
               <th>Activities</th>
           </tr>
           <tr>
-              <td style="color: darkblue;">>Inception</td>
+              <td style="color: darkblue;">Inception</td>
               <td>Juicy</td>
               <td>Golf</td>
           </tr>
               <tr>
-              <td style="color: darkblue;">>Step Brothers</td>
+              <td style="color: darkblue;">Step Brothers</td>
               <td>All Along the Watchtower</td>
               <td>Workout</td>
           </tr>
           <tr>
-              <td style="color: darkblue;">>The Big Lebowski</td>
+              <td style="color: darkblue;">The Big Lebowski</td>
               <td>Blowin In the Wind</td>
               <td>Cooking</td>
           </tr>
