--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Matt's Bio</title>
 
   <style>
+     {
+  background-image: url(img_flwr.gif), url(paper.gif);
+  background-position: right bottom, left top;
+  background-repeat: no-repeat, repeat;
+  padding: 15px;
+    }
     h1 {
       text-shadow: 2px 2px #ff0000;
       text-align: center;
@@ -16,10 +22,7 @@
     p {
       text-align: center;
     }
-    body {
-    background-color: rgb(247, 229, 131);
-    text-align: center;
-  }
+    
     img {
       width: 10%;
       border-radius: 50%;
