--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
   <title>Matt's Bio</title>
 
   <style>
-     {
-  background-image: url(img_flwr.gif), url(paper.gif);
-  background-position: right bottom, left top;
-  background-repeat: no-repeat, repeat;
-  padding: 15px;
-    }
+     
     h1 {
       text-shadow: 2px 2px #ff0000;
       text-align: center;
@@ -22,7 +17,10 @@
     p {
       text-align: center;
     }
-    
+    body {
+      background:#589ca7 url('dreamcodes/bg_images/color/c12.jpg') no-repeat center top; 
+      text-align: center;
+  }
     img {
       width: 10%;
       border-radius: 50%;
