--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       text-align: center;
     }
     body {
-      background:#589ca7 url('dreamcodes/bg_images/color/c12.jpg') no-repeat center top; 
+      background:#589ca7 url('http://www.dreamtemplate.com/dreamcodes/bg_images/wood/w6.jpg') no-repeat center top; 
       text-align: center;
   }
     img {
