--- a/index.html
+++ b/index.html
@@ -18,28 +18,42 @@
       text-align: center;
     }
     body {
-      background:#589ca7 url('http://www.dreamtemplate.com/dreamcodes/bg_images/wood/w6.jpg'); 
-      text-align: center;
-  }
-    img {
-      width: 10%;
-      border-radius: 50%;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
+      margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-    .gumdrop {
-      color:  rgb(58, 32, 207);
-    }
+.hero-image {
+  background-image: url("Head Shot.jpeg");
+  background-color: #cccccc;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
 
-    #brownbear {
-      color: rgb(58, 32, 207);
-    }
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
 
-  </style>
-
+</style>
+  
 </head>
+
+<div class="hero-image">
+  <div class="hero-text">
+    <h1 style="font-size:50px">I am Jane Doe</h1>
+    <h3>And I'm a Photographer</h3>
+    <button>Hire me</button>
+  </div>
+</div>
+
+  
 
 <body>
 
