--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 .hero-image {
   background-image: url("Head Shot.jpeg");
   background-color: #cccccc;
-  height: 500px;
+  height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -47,8 +47,8 @@
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-size:50px">I am Jane Doe</h1>
-    <h3>And I'm a Photographer</h3>
+    <h1 style="font-size:50px">I am Matt Houser</h1>
+    <h3>And I'm a Data Analyst</h3>
     <button>Hire me</button>
   </div>
 </div>
