--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 }
 
 .hero-image {
-  background-image: url("Head Shot.jpeg");
+  background-image: url("Wedding Pic.jpg");
   background-color: #cccccc;
-  height: 250px;
+  height: 500px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
