--- a/index.html
+++ b/index.html
@@ -57,16 +57,14 @@
 
 <body>
 
-    <h1 style="color:  rgb(58, 32, 207);">Matt Houser</h1>
-
-      <img src="Head Shot.jpeg" alt="Head Shot">
+    <h1 style="color:  rgb(19, 77, 14);">Matt Houser</h1>
       
-      <p style="color: darkblue;">
+      <p style="color: rgb(19, 77, 14);">
         I am originally from Zionsville, IN. Went to Western Kentucky University in Bowling Green, KY
         and graduated with a degree in Sport Management and minor in Marketing. 
       </p>
 
-      <p style="color: darkblue;">
+      <p style="color: rgb(19, 77, 14);">
       I became a <span style="font-style: oblique;">golf professional</span> in 2011, moved back to Indiana in 2014 and reside in Broad Ripple.
       Currently work in client success for a golf tournament software company and is taking this class to 
       work with the development team for Golf Genius in the future. 
@@ -79,32 +77,32 @@
         </li>
         <li>
             <strong>Github:</strong> 
-            <a style="color:  rgb(58, 32, 207); font-style: italic;"href="#">mhouser33</a>
+            <a style="color:  rgb(19, 77, 14); font-style: italic;"href="#">mhouser33</a>
         </li>
         <li>
             <strong>Facebook:</strong> 
-            <a style="color:  rgb(58, 32, 207); font-style: italic;"href="#">https://www.facebook.com/matt.houser.12</a>
+            <a style="color:  rgb(19, 77, 14); font-style: italic;"href="#">https://www.facebook.com/matt.houser.12</a>
         </li> 
       </ul>
         
       <table align="center"; border="1"> 
           <tr> 
-              <th style="color: darkblue;">Movies</th>
+              <th style="color: rgb(19, 77, 14);">Movies</th>
               <th>Songs</th>
               <th>Activities</th>
           </tr>
           <tr>
-              <td style="color: darkblue;">Inception</td>
+              <td style="color: rgb(19, 77, 14);">Inception</td>
               <td>Juicy</td>
               <td>Golf</td>
           </tr>
               <tr>
-              <td style="color: darkblue;">Step Brothers</td>
+              <td style="color: rgb(19, 77, 14);">Step Brothers</td>
               <td>All Along the Watchtower</td>
               <td>Workout</td>
           </tr>
           <tr>
-              <td style="color: darkblue;">The Big Lebowski</td>
+              <td style="color: rgb(19, 77, 14);">The Big Lebowski</td>
               <td>Blowin In the Wind</td>
               <td>Cooking</td>
           </tr>
