--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
      
     h1 {
-      text-shadow: 2px 2px #ff0000;
+      text-shadow: 2px 2px #77b68c;
       text-align: center;
     }
     table {
@@ -23,7 +23,7 @@
 }
 
 .hero-image {
-  background-image: url("Wedding Pic.jpg");
+  background-image: url("Wedding Pic 2.jpg");
   background-color: #cccccc;
   height: 1250px;
   background-position: center;
@@ -73,7 +73,7 @@
       <ul>
         <li>
             <strong>Email:</strong> 
-            <a style="color:  rgb(58, 32, 207); font-style: italic;"href="#">mhouser33@yahoo.com</a>
+            <a style="color:  rgb(19, 77, 14); font-style: italic;"href="#">mhouser33@yahoo.com</a>
         </li>
         <li>
             <strong>Github:</strong> 
